# Juzhen

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  Y.matrix  YT.matrix  classify.weights  main.cpp  main.cu  makefile
.devcontainer/: devcontainer.json
cpp/: core.hpp  cudam.cpp  cudam.h  cukernels.cu  cumatrix.cu  cumatrix.cuh  helper.cpp  helper.h  helper.hpp  hipbackend.hpp  hipkernels.cpp  hipmatrix.cpp  hipmatrix.cuh  jamac.hpp  juzhen.hpp  launcher.cu  layer.hpp  matrix.hpp  memory.hpp  mpsmatrix.cpp  mpsmatrix.hpp  operators.hpp  winlauncher.cu
cpp/metal/: MPSWrapper.h  MPSWrapper.mm  private_memory  privatemem.mm  shaders.metal
docs/: single-gpu-improvement-tracker.md  yan-spec.md
example/: helloworld.cpp  helloworld_gpu.cpp  logisticregression_MNIST.cpp  logisticregression_MNIST_GPU.cpp  logisticregression_simple.cpp  test.cpp
examples/: compute_fid.py  demo.cu  demo_arithmetic.cu  demo_classification.cu  demo_cnn_mnist.cu  demo_cnn_mnist_cpu.cpp  demo_cnn_mnist_cudnn.cu  demo_cnn_mnist_mps.cu  demo_cnn_rectified.cu  demo_diffusion_tinystories.cu  demo_discretediffusion.cu  demo_discretediffusion_web.cu  demo_gemm.cu  demo_gui.cu  demo_mnist.cpp  demo_mnist.cu  demo_mnist_web.cu  demo_rectified.cu  demo_rectified_infer.cu  demo_simulation.cu  demo_tinystories.cu  demo_tinystories_web.cu  demo_transformer.cu  demo_transformer.py  demo_transformer_web.cu  demo_word2vec.cu  demo_zeroflow_web.cu  helloworld.cpp  helloworld.cu  helloworld_gpu.cpp  helloworld_nn.cpp  helloworld_nn.cu  knn.cu  logisticregression_MNIST.cpp  logisticregression_MNIST_GPU.cpp  logisticregression_simple.cpp  pagerank.cu  plotZt.py  test.cpp
examples/wasm/: build.sh  shell.html  shell_combined.html  zeroflow_cond_wasm.cpp  zeroflow_wasm.cpp
examples/web/: diffusion.html  mnist.html  tinystories.html  transformer.html  zeroflow.html  zeroflow_combined_standalone.html  zeroflow_standalone.html
misc/: discrete_diffusion_notes.md  juzhen_vs_pytorch_speed.md  tinystories_gpteval.md  tinystories_loss_benchmark.md  word2vec_demo_plan.md
ml/: checkpoint.hpp  dataloader.hpp  layer.hpp  plotting.hpp  util.cuh
scripts/: tinystories_encode_train.py  tinystories_gpteval.py  tinystories_prepare.py  tinystories_pytorch_bench.py
tests/: basic.testdata  benchmarkCoreOps.cu  benchmarkPytorchCompare.py  benchmarkTrainingStep.cu  benchmark_gemm.mm  benchmark_gemm3  benchmark_gemm_cpu  benchmark_gemm_cpu.cpp  benchmark_gemm_gpu.cu  benchmark_gemm_mps.mm  benchmark_mps  cnn_train_ref.txt  cublas_tflops_test  demo_knn.py  demo_mnist.py  demo_mps_gemm.py  demo_transformer.py  testCNNTrainParity.cu  testCPUConv.cu  testCheckpointResume.cu  testConvBackendParity.cu  testConvLayers.cu  testDataLoader.cu  testDataLoaderCPU.cu  testDiffusionScore.cu  testDiffusionTrainIterCPU.cu  testDiffusionTrajectoryCompare.cu  testEigen.cu  testElementwiseReduceTorch.py  testElementwiseReduceTorchDump.cu  testMATLAB.m  testMPSParity.cu  testMPSRandStability.cu  testMPSRandnStability.cu  testMPSStackComputedParity.cu  testNumpy.py  testRectifiedFlowTinyUNetParity.cu  testRectifiedPathParity.cu  testRocmCpuParity.cu  testRocmDeviceProof.cu  (+12 more)
